--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Young Lead Conference</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
-  <nav class="navbar" id="navbar">
+<nav class="navbar" id="nav-menu">
     <div class="nav-container">
       <div class="logo">
         <img id="logo" src="Images/logo.jpg" alt="Logo" />
         <span style="color: white; font-weight: bold;">YLC</span>
       </div>
+
       <div class="hamburger" id="hamburger">
         <div></div>
         <div></div>
@@ -24,7 +26,7 @@
         <li><a href="#hero">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#vision">Vision</a></li>
-        <li><a href="#program">Program</a></li>
+        <li><a href="#upcoming">Program</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -40,9 +42,6 @@
       <div><span id="seconds">00</span><small>Seconds</small></div>
     </div>
     <a href="#upcoming" class="btn">Register Now</a>
-    <div id="topdiv">
-      <img src="Images/bckgnd.jpg" alt="Background Image" />
-    </div>
   </header>
 
   <section id="about" class="section">
@@ -67,12 +66,12 @@
     <p id="theme-teaser">Our next conference is scheduled for September 27, 2025. This upcoming edition will feature insightful sessions, seasoned speakers, and an atmosphere charged with inspiration and impact.
 </p>
     
-    <img src="Images/flyer.jpg" alt="Conference Flyer" class="flyer" />
+    <img src="Images/flyer.jpg" alt="Conference Flyer" class="flyer" onclick="openModal(this)" />
     <p><strong>Date:</strong> September 27, 2025<br>
        <strong>Time:</strong> 10:00 AM<br>
        <strong>Venue:</strong> Dopemu, Agege, Lagos State <br>
        <strong>Check-In:</strong>  Available at the venue
-      </p>
+      </p><br>
     <a href="https://lu.ma/event/evt-0JmxPbybp9EC2nh" class="btn" target="_blank">Register for Event</a>
     <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
   </section>
@@ -81,13 +80,7 @@
 
   <section id="gallery-section" class="section">
     <h2 style="text-align: center;">Past Events</h2>
-    <!--
-    <div class="gallery-controls">
-      <button onclick="filterGallery('all')">All</button>
-      <button onclick="filterGallery('event')">Events</button>
-      <button onclick="filterGallery('student')">Students</button>
-    </div>
-    -->
+  
     <div class="slideshow-container">
         <div class="mySlides fade">
             <img src="Images/ppic1.jpg" alt="Student" class="gallery-item student" onclick="openModal(this)">
@@ -150,7 +143,7 @@
       <img id="convener-photo" src="Images/Stephen Simon.jpg" alt="Convener Photo"/>
       <div style="flex: 1; min-width: 250px;">
         <h3 style="margin-bottom: 0.5rem;">Stephen Simon</h3>
-        <p style="font-weight: bold; color: #333;">Founder & Program Convener</p>
+        <p style="font-weight: 600; color: #333;">Founder & Program Convener</p>
         <p style="margin-top: 1rem; color: #555;">Stephen Simon is the visionary founder and convener of Young Lead Global. With a deep passion for leadership development, youth empowerment, and "the making of kings," he has spent years building platforms that foster knowledge, transformation, and growth.  </p>
       </div>
       <div><br>
@@ -171,24 +164,26 @@ You're too small for your existence—live to bless lives!"
       Want to be part of the movement? 
       Get Involved, Volunteer,Partner with Us, Sponsor an Event, Media & Promotion Support and Join Our Online Community?  </p>
 <br><br><br>
+      <form id="contactForm" action="https://formspree.io/f/xanwezjl" method="post">
       <div class="form-group">
         <label for="name">Full Name</label>
-        <input type="text">
+        <input type="text" name="name" required>
       </div>
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email">
+        <input type="email" name="email" required>
       </div>
 
       <div class="form-group">
-        <label for="name">Message</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <label for="message">Message</label>
+        <textarea name="message" id="message" cols="30" rows="10" required></textarea>
       </div>
       
       <div class="submit-btn">
-        <a href=""><button class="submit">Submit</button></a>
+        <button class="submit" type="submit">Submit</button>
       </div>
+      </form>
 
 
 
@@ -202,13 +197,12 @@ You're too small for your existence—live to bless lives!"
   <footer id="contact">
     <div class="contact-info">
       <h3>Contact Us</h3>
-      <p>Email: <a href="mailto:youngleadglobal@gmail.com">youngleadglobal@gmail.com</a></p>
+      <p>Email: <a id="email" href="mailto:youngleadglobal@gmail.com">youngleadglobal@gmail.com</a></p>
       <p>Phone:  +2349024492229, +2348107478952</p>
       <div class="social-media">
-        <a href="https://www.facebook.com/profile.php?id=100007029856106"><i class="fa fa-facebook" ></i></a>
-        <a href="https://www.instagram.com/sucesspremiertv/"><i class="fa fa-instagram"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="https://youtube.com/@successpremiertv?si=mBQxuV9eV5KOPAm4"><i class="fa fa-youtube"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100007029856106" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/sucesspremiertv/" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
+        <a href="https://youtube.com/@successpremiertv?si=mBQxuV9eV5KOPAm4" target="_blank" rel="noopener"><i class="fa fa-youtube"></i></a>
       </div>
     </div>
     <p>&copy; 2025 Young Lead Conference. All rights reserved.</p>
