--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
        <strong>Venue:</strong> Dopemu, Agege, Lagos State <br>
        <strong>Check-In:</strong>  Available at the venue
       </p><br>
-    <a href="https://lu.ma/event/evt-0JmxPbybp9EC2nh" class="btn" target="_blank">Register for Event</a>
+    <a href="https://lu.ma/5gxdhuxn" class="btn" target="_blank">Register for Event</a>
     <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
   </section>
 
