--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </nav>
 
   <header id="hero" class="hero">
-    <h1>Young Lead Conference 2025</h1>
-    <p>Inspiring the Next Generation | 27th September, Lagos</p>
+    <h1>Youth Lead Conference 2025</h1>
+    <p>Empowering Vision and Dream, Igniting Changes| 27th September, Lagos</p>
     <div class="countdown" id="countdown">
       <div><span id="days">00</span><small>Days</small></div>
       <div><span id="hours">00</span><small>Hours</small></div>
@@ -74,7 +74,22 @@
       </p><br>
     <a href="https://lu.ma/5gxdhuxn" class="btn" target="_blank">Register for Event</a>
     <script id="luma-checkout" src="https://embed.lu.ma/checkout-button.js"></script>
+
   </section>
+
+
+    <!--<section class="section" id="trailer">
+    <h2 style="text-align: center;">Trailer</h2>
+      <div class="video-container">
+        <video controls poster="Images/logo.jpg" >
+          <source src="trailer.mp4" type="video/mp4">
+        </video>
+    </div>
+    </section>-->
+   
+
+
+
 
 
 
@@ -151,8 +166,8 @@
           <strong>Convener’s Quote:</strong>
 "I am not a consumer but a CONTRIBUTOR.
 You're too small for your existence—live to bless lives!"
-
         </p>
+        <a id="simon" href="https://stephensimon.vercel.app/" target="_blank" rel="noopener">Know more about the founder</a>
       </div>
     </div>
   </section>
@@ -162,9 +177,9 @@ You're too small for your existence—live to bless lives!"
 
     <p>
       Want to be part of the movement? 
-      Get Involved, Volunteer,Partner with Us, Sponsor an Event, Media & Promotion Support and Join Our Online Community?  </p>
+      Get Involved, Volunteer,Partner with Us, Sponsor an Event, Media & Promotion? <br> Support and Join Our Online Community?  </p>
 <br><br><br>
-      <form id="contactForm" action="https://formspree.io/f/xanwezjl" method="post">
+      <form id="contactForm"  method="POST">
       <div class="form-group">
         <label for="name">Full Name</label>
         <input type="text" name="name" required>
@@ -184,6 +199,7 @@ You're too small for your existence—live to bless lives!"
         <button class="submit" type="submit">Submit</button>
       </div>
       </form>
+      <p id="responseMessage"></p>
 
 
 
@@ -203,11 +219,11 @@ You're too small for your existence—live to bless lives!"
         <a href="https://www.facebook.com/profile.php?id=100007029856106" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
         <a href="https://www.instagram.com/sucesspremiertv/" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a>
         <a href="https://youtube.com/@successpremiertv?si=mBQxuV9eV5KOPAm4" target="_blank" rel="noopener"><i class="fa fa-youtube"></i></a>
+        <a href="https://wa.me/2349024492229" target="_blank" rel="noopener"><i class="fa fa-whatsapp"></i></a>
       </div>
     </div>
     <p>&copy; 2025 Young Lead Conference. All rights reserved.</p>
   </footer>
-
 
   <script src="script.js"></script>
 </body>
