--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </nav>
 
   <header id="hero" class="hero">
-    <h1>Youth Lead Conference 2025</h1>
+    <h1>Young Lead Conference 2025</h1>
     <p>Empowering Vision and Dream, Igniting Changes| 27th September, Lagos</p>
     <div class="countdown" id="countdown">
       <div><span id="days">00</span><small>Days</small></div>
